--- a/style.css
+++ b/style.css
@@ -256,6 +256,7 @@ body.dark #moon{
  align-items: center;
  top: 20px;
  left: 20px;
+ padding: 12px;
  justify-content: center;
  width: 40px;
  height: 40px;
